corrected some spacing of the footer

--- a/src/project.css
+++ b/src/project.css
@@ -117,7 +117,7 @@ p {
 }
 
 footer {
-  margin-bottom: 50px;
+  margin: 50px 0;
 }
 footer .inquiry-box {
   background: var(--secondary-color);
